funland/owncloud/ocis/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ocis
  namespace: owncloud
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "cloud.batlab.io"
  rules:
    - backendRefs:
        - name: ocis
          port: 9200
