funland/owncloud/ocis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocis-ingress
  namespace: owncloud
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: cloud.batlab.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ocis
            port:
              number: 9200
